--- a/portfolio.html
+++ b/portfolio.html
@@ -312,6 +312,19 @@
               </li>
             </ul>
           </div>
+          <form class="newsletter">
+            <label class="newsletter-label" for="mail">
+              Zapisz się do newslettera
+              <input
+                class="newsletter-input"
+                type="email"
+                name="email"
+                id="mail"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="newsletter-button">Zapisz się</button>
+          </form>
         </div>
       </div>
     </footer>
