--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       <div class="modal">
         <button class="buton-modal" data-modal-close><b>X</b></button>
         <form>
-          <h3>Zostaw swoje dane w formularzu poniżej</h3>
+          <h3 class="form-title">Zostaw swoje dane w formularzu poniżej</h3>
           <div class="name">
             <label class="order-label" for="user-name"
               >Imię<input
@@ -443,7 +443,7 @@
           </div>
           <div class="email">
             <label class="order-label" for="user-email">
-              Mail
+              Email
               <input
                 class="order-input"
                 type="email"
@@ -470,11 +470,11 @@
             />
             <div class="acceptance-checked">
               <svg class="checked-bacground" width="16" height="15">
-                <use href="images/icons.svg#icon-check"></use>
+                <use href="images/icons.svg/icon-checked"></use>
               </svg>
             </div>
-            Oświadczam iż akceptuję <a href="">Regulamin</a> i
-            <a href="">Politykę Prywatności</a>.
+            Oświadczam iż akceptuję <a href="#">Regulamin</a> i
+            <a href="#">Politykę Prywatności</a>.
           </label>
           <button type="submit" class="order-button" lang="pl">Wyślij</button>
         </form>
