--- a/index.html
+++ b/index.html
@@ -473,8 +473,8 @@
                 <use href="images/icons.svg/icon-checked"></use>
               </svg>
             </div>
-            Oświadczam iż akceptuję <a href="#">Regulamin</a> i
-            <a href="#">Politykę Prywatności</a>.
+            Oświadczam iż akceptuję&nbsp; <a href="#">Regulamin</a>&nbsp;i
+            <a href="#">&nbsp;Politykę Prywatności</a>.
           </label>
           <button type="submit" class="order-button" lang="pl">Wyślij</button>
         </form>
