--- a/index.html
+++ b/index.html
@@ -461,21 +461,23 @@
               placeholder="Wprowadź tekst"
             ></textarea>
           </label>
+
           <label class="acceptance-label" for="user-acceptance">
-            <input
-              class="acceptance-input checkbox-hidden"
-              type="checkbox"
-              name="acceptance"
-              id="user-acceptance"
-            />
             <div class="acceptance-checked">
-              <svg class="checked-bacground" width="16" height="15">
-                <use href="images/icons.svg/icon-checked"></use>
+              <input
+                class="acceptance-input checkbox-hidden"
+                type="checkbox"
+                name="acceptance"
+                id="user-acceptance"
+              />
+              <svg class="checked-background" width="16" height="15">
+                <use href="images/icons.svg#icon-checked"></use>
               </svg>
             </div>
             Oświadczam iż akceptuję&nbsp; <a href="#">Regulamin</a>&nbsp;i
             <a href="#">&nbsp;Politykę Prywatności</a>.
           </label>
+
           <button type="submit" class="order-button" lang="pl">Wyślij</button>
         </form>
       </div>
