checbox correction part 2

--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
           <label class="acceptance-label" for="user-acceptance">
             <div class="acceptance-checked">
               <input
-                class="acceptance-input checkbox-hidden"
+                class="acceptance-input"
                 type="checkbox"
                 name="acceptance"
                 id="user-acceptance"
