checkbox correction part 3

--- a/index.html
+++ b/index.html
@@ -474,8 +474,10 @@
                 <use href="images/icons.svg#icon-checked"></use>
               </svg>
             </div>
-            Oświadczam iż akceptuję&nbsp; <a href="#">Regulamin</a>&nbsp;i
-            <a href="#">&nbsp;Politykę Prywatności</a>.
+            <p class="acceptance-text">
+              Oświadczam iż akceptuję&nbsp; <a href="#">Regulamin</a>&nbsp;i
+              <a href="#">&nbsp;Politykę Prywatności</a>.
+            </p>
           </label>
 
           <button type="submit" class="order-button" lang="pl">Wyślij</button>
